<resources>
    <string name="app_name">NewsPlus</string>
    <string name="app_title">Google News</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="key_network_preference">listPref</string>
    <string name="title_network_preference">Download Feed</string>
    <string name="summary_network_preference">Network connectivity required to download the feed</string>

    <string name="key_checkbox_preference">summaryPref</string>
    <string name="title_checkbox_preference">Show Summaries</string>
    <string name="summary_checkbox_preference">Show a summery for each link</string>

    <!--  Menu items -->
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>


    <string name="title_activity_network">NetworkActivity</string>

    <!--  NetworkActivity -->
    <string name="page_title">Newest Google news tagged \'android\'</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi connected.</string>
    <string name="mobile_data_connected">Mobile data network connected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="title_activity_news_details">NewsDetailsActivity</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner">YOUR_AD_ID</string>
    <string name="interstitial_full_screen">YOUR_INTERSTITIAL_AD_ID</string>

    <string name="secondary_nav_drawer_name">News Category</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="nav_item_top_story">Top Stories</string>
    <string name="nav_item_technology">Technology</string>
    <string name="nav_item_business">Business</string>
    <string name="nav_item_sports">Sports</string>
    <string name="nav_item_health">Health</string>
    <string name="nav_item_entertainment">Entertainment</string>
    <string name="nav_item_world">World</string>
    <string name="nav_item_science">Science</string>

    <string name="title_country_preference">Chose Country</string>
    <string name="country_list_preference_key">country_preference</string>
    <string name="default_country">India</string>

    <string-array name="country_array">
        <item>India</item>
        <item>U.S.</item>
        <item>Australia</item>
    </string-array>

    <string-array name="country_key_array">
        <item>in</item>
        <item>us</item>
        <item>au</item>
    </string-array>

    <string name="title_language_preference">Chose Language</string>
    <string name="language_list_preference_key">language_preference</string>
    <string name="default_language">English</string>
    <string-array name="language_array">
        <item>Hindi</item>
        <item>English</item>
    </string-array>

    <string-array name="language_key_array">
        <item>hi</item>
        <item>en</item>
    </string-array>

</resources>
