<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/title_country_preference">
        <android.support.v7.preference.ListPreference
            android:defaultValue="in"
            android:entries="@array/country_array"
            android:entryValues="@array/country_key_array"
            android:key="@string/country_list_preference_key"
            android:summary="@string/default_country" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_language_preference">
        <android.support.v7.preference.ListPreference
            android:defaultValue="en"
            android:entries="@array/language_array"
            android:entryValues="@array/language_key_array"
            android:key="@string/language_list_preference_key"
            android:summary="@string/default_language" />
    </PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>